# Steca

./: .appveyor.yml  .clang-format  .exec-clang-format  .find_ours  .gitignore  .gitmodules  .travis.yml  .wc_all_code.sh  .wc_our_code.sh  .wo_tests  .wo_tests_find  AUTHORS  CHANGELOG  CITATION  CMakeLists.txt  CODING.md  Dockerfile  Doxyfile  FILE_STATUS  GLOSSARY  MAINTAINER  README  README.md  STeCa2 Tutorial.md  STeCa2.pro  StecaInstallScript.qs  TODO  VERSION  _StecaBuild64_.bat  action.cpp  action.h  app.cpp  app.h  coding_guidelines.md  defs.cpp  defs.h  main.cpp  mainwin.cpp  mainwin.h  make_pro.sh  (+15 more)
LevMar/: Axb.cpp  CMakeLists.txt  compiler.h  levmar.h  lm.cpp  lm_core.cpp  lmbc.cpp  lmbc_core.cpp  lmblec.cpp  lmbleic.cpp
LevMar/FastDelegate/: FastDelegate.h
LevMar/LM/: Axb.cpp  lmlec.cpp
core/: CMakeLists.txt  README  core.cpp  core.h  core.pro  core_angle_map_array.h  core_approximation.cpp  core_approximation.h  core_array2d.cpp  core_array2d.h  core_curve.cpp  core_curve.h  core_dataset.cpp  core_dataset.h  core_debug.h  core_defs.cpp  core_defs.h  core_file.cpp  core_file.h  core_fit_fitting.cpp  core_fit_fitting.h  core_fit_functions.cpp  core_fit_functions.h  core_fit_limits.h  core_fit_methods.cpp  core_fit_methods.h  core_fitting.cpp  core_fitting.h  core_image.cpp  core_image.h  core_image_cut.cpp  core_image_cut.h  core_image_transform.cpp  core_image_transform.h  core_json.cpp  core_json.h  core_lens.cpp  core_lens.h  core_lib.cpp  core_lib.h  (+28 more)
core/LevMar/: Axb.cpp  Axb_core.cpp  CMakeLists.txt  compiler.h  levmar.h  lm.cpp  lm_core.cpp  lmbc.cpp  lmbc_core.cpp  lmblec.cpp  lmblec_core.cpp  lmbleic.cpp  lmbleic_core.cpp  lmlec.cpp  misc.cpp  misc_core.cpp
core/algo/: calc_polefigure.cpp  calc_polefigure.h  collect_intensities.cpp  collect_intensities.h  coord_trafos.cpp  coord_trafos.h  fitting.cpp  fitting.h  interpolate_polefig.cpp  interpolate_polefig.h  matrix.cpp  matrix.h  project_intensity.cpp  project_intensity.h
core/approx/: approx_function.cpp  approx_function.h  approx_functions.cpp  approx_functions.h  approx_methods.cpp  approx_methods.h
core/aux/: angles.cpp  angles.h  async.cpp  async.h  exception.cpp  exception.h  json.cpp  json.h  settings.cpp  settings.h  variant.cpp  variant.h
core/base/: angles.cpp  angles.h  async.cpp  async.h  exception.cpp  exception.h  settings.cpp  settings.h  variant.cpp  variant.h
core/calc/: active_clusters.cpp  active_clusters.h  all_infos.cpp  all_infos.h  allpeaks_allinfos.cpp  allpeaks_allinfos.h  baseline.cpp  baseline.h  calc_lens.cpp  calc_lens.h  calc_polefigure.cpp  calc_polefigure.h  calc_reflection.cpp  calc_reflection.h  calc_reflection_info.cpp  calc_reflection_info.h  coord_trafos.cpp  coord_trafos.h  dfgram.cpp  dfgram.h  export.cpp  export.h  gamma_selection.cpp  gamma_selection.h  image_transform.cpp  image_transform.h  info_sequence.cpp  info_sequence.h  interpol_params.cpp  interpol_params.h  interpolate_polefig.cpp  interpolate_polefig.h  lens.cpp  lens.h  matrix.cpp  matrix.h  onepeak_allinfos.cpp  onepeak_allinfos.h  peak.cpp  peak.h  (+8 more)
core/data/: active_clusters.cpp  active_clusters.h  angle_map.cpp  angle_map.h  cluster.cpp  cluster.h  collect_intensities.cpp  collect_intensities.h  corrset.cpp  corrset.h  data_dataset.cpp  data_dataset.h  data_file.cpp  data_file.h  datafile.cpp  datafile.h  datasequence.cpp  datasequence.h  dataset.cpp  dataset.h  dfgram.cpp  dfgram.h  experiment.cpp  experiment.h  export.cpp  export.h  from_map.cpp  from_map.h  gamma_sector.cpp  gamma_sector.h  gamma_selection.cpp  gamma_selection.h  geometry.cpp  geometry.h  image.cpp  image.h  image_transform.cpp  image_transform.h  lens.cpp  lens.h  (+14 more)
core/def/: README.md  comparable.h  comparators.h  debug.cpp  debug.h  def_alg.h  def_cmp.h  def_cmp_impl.h  def_debug.h  def_exc.cpp  def_exc.h  def_gsl.cpp  def_gsl.h  def_macros.h  defs.cpp  defs.h  exception.cpp  exception.h  idiomatic_for.h  macros.h  numbers.cpp  numbers.h  scoped.h  settings.cpp  settings.h  special_pointers.h
core/fit/: fit_fun.cpp  fit_fun.h  fit_function.h  fit_methods.cpp  fit_methods.h  fit_models.cpp  fit_models.h  fit_par.h  (+15 more)
gui/: CMakeLists.txt  about.cpp  about.h  actions.cpp  actions.h  app.cpp  app.h  colors.cpp  colors.h  config.cpp  config.h  console.cpp  console.h  defs.cpp  defs.h  delegates.cpp  delegates.h  dock_files.cpp  dock_files.h  dock_info.cpp  dock_info.h  filedialog.cpp  filedialog.h  gui.pro  gui_cfg.h  gui_helpers.cpp  gui_helpers.h  imageinfo.cpp  imageinfo.h  images.cpp  images.h  layout_helpers.cpp  layout_helpers.h  main.cpp  mainimagewidget.cpp  mainimagewidget.h  mainwin.cpp  mainwin.h  mainwin_parts.cpp  mainwin_parts.h  (+65 more)
io/: CMakeLists.txt  io_caress.cpp  io_io.cpp  io_io.h  io_mar.cpp  io_tiff.cpp
lib/: CMakeLists.txt
main/: CMakeLists.txt  installscript.qs  resources.qrc  resources.rc  steca.cpp
qcr/: CMakeLists.txt
tests/: CMakeLists.txt  test_approx.cpp  test_approx.h  test_core.cpp  test_core.h  test_core_approx.cpp  test_core_approx.h  test_core_array2d.cpp  test_core_array2d.h  test_core_dataset.cpp  test_core_dataset.h  test_core_functions.cpp  test_core_functions.h  test_core_image.cpp  test_core_image.h  test_core_lens.cpp  test_core_lens.h  test_core_lib.cpp  test_core_lib.h  test_core_link.cpp  test_core_link.h  test_core_polefigure.cpp  test_core_polefigure.h  test_core_range.cpp  test_core_range.h  test_core_session.cpp  test_core_session.h  test_core_trees.cpp  test_core_trees.h  test_helpers.cpp  test_helpers.h  test_io.cpp  test_io.h  test_link.cpp  test_link.h  test_save_load_json.cpp  test_save_load_json.h  tests.cpp  tests.h  tests.pro  (+2 more)
utest/: CMakeLists.txt  test000_testtest.cpp  test001_matrix.cpp  test002_rounding.cpp  test002_xy.cpp  test003_angles.cpp  test004_array2d.cpp  test005_ij.cpp  test005_strop.cpp  test006_range.cpp  test007_variant.cpp  test008_caches.cpp  test008_exceptions.cpp  test009_gsl.cpp  test009_numbers.cpp  test010_io.cpp  test011_export.cpp  test011_scoped_ptr.cpp  test020_anonymous_output.cpp  test021_bounds.cpp  test101_anonymous_output.cpp
(+792 files in other folders)
